--- a/src/App.css
+++ b/src/App.css
@@ -1,99 +1,132 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.App {
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.task1-image,
-.task2-video,
-.task3-audio {
-  height: 88vh;
-  width: 70%;
-  margin: 35px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 20px;
-  padding: 30px;
-}
-
-input[type="file"] {
-  display: none;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 20px;
-  padding: 10px 15px;
-  font-size: 18px;
-  font-weight: bolder;
-  border-radius: 10px;
-}
-
-.contanier-image,
-.contanier-video,
-.contanier-audio{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
-  overflow: hidden;
+    font-family: Niconne !important;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 
-/* Task 1 */
-img {
-  max-width: 100%;
+:root {
+    --main-color: #AB3333;
+    --main-font-color: #453A3C;
+    --secondary-font-color: #979797;
+    --background-color: #E3E2E0;
+    --background-hover-color: #ffffffd8;
+    --border-color: #E3E2E0;
+    --placeholder-color: #C6C5C3;
+    --dropdown-item-color: #9D9D9D;
+
 }
 
-.task1-image {
-  border: 2px solid darkcyan;
+.wrapper {
+    display: grid;
+    grid-template-columns: 230px 1fr;
+    grid-template-rows: auto 1fr;
 }
 
-label[for="input-image"] {
-  border: 2px dashed darkcyan;
-  color: darkcyan;
+.sidebarContainer {
+    grid-row: 1 / span 2;
+    grid-column: 1;
+}
+
+.navbarContainer {
+    grid-row: 1;
+    grid-column: 2;
+
+    .navbar {
+        width: calc(100% - 230px);
+    }
+}
+
+.content {
+    grid-row: 2;
+    grid-column: 2;
+    padding-top: 8%;
+    margin-left: 4% !important;
+    margin-right: 4% !important;
+    position: relative;
+    z-index: 1;
+}
+
+#selectColors,
+select,
+input {
+    box-shadow: none !important;
+    outline: none !important;
+
+    &:focus {
+        border: 1px solid var(--border-color) !important;
+    }
+}
+
+input::placeholder {
+    color: var(--placeholder-color) !important;
 }
 
 
-/* Task 2 */
-.task2-video {
-  border: 2px solid purple;
+@media (max-width: 1024px) {
+    
+    .wrapper {
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto 1fr;
+    }
+
+    .sidebarContainer {
+        grid-row: 1;
+        grid-column: 1;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #d3d3d346 !important;
+    }
+
+    .offcanvas-body {
+        padding: 0 !important;
+
+        .links-section {
+            margin-left: 20px !important;
+        }
+    }
+
+    .navbarContainer {
+        grid-row: 1;
+        grid-column: 2;
+        display: flex;
+        align-items: center;
+
+        .navbar {
+            position: relative !important;
+            width: 100%;
+        }
+    }
+
+    .content {
+        grid-row: 2;
+        grid-column: 1 / span 2;
+        height: 100vh;
+        padding-top: 0 !important;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+    }
 }
 
-video {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
+@media (min-width: 768px) and (max-width: 1024px) {
+    *{
+        font-size: 22px ;
+    }
+    .content {
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+    }
+
 }
 
-label[for="input-video"] {
-  border: 2px dashed goldenrod;
-  color: goldenrod;
-}
+@media (max-width: 768px) {
+    *{
+        font-size: 18px ;
+    }
+    .content {
+        margin-left: 7% !important;
+        margin-right: 7% !important;
+    }
 
-/* Task 3 */
-.task3-audio {
-  border: 2px solid goldenrod;
-  height: 50vh;
-  width: 70%;
-}
-
-audio {
-  width: 50%;
-}
-
-label[for="input-audio"] {
-  border: 2px dashed goldenrod;
-  color: goldenrod;
 }
